k8s/deployment_configmap2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goserver
  labels:
    name: goserver
spec:
  replicas: 8
  selector:
    matchLabels:
      name: goserver
  template:
    metadata:
      name: goserver
      labels:
        name: goserver
    spec:
      containers:
      - name: goserver
        image: devguerreiro/hello-go:v2
