k8s/deployment_resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goserver
  labels:
    name: goserver
spec:
  replicas: 1
  selector:
    matchLabels:
      name: goserver
  template:
    metadata:
      name: goserver
      labels:
        name: goserver
    spec:
      containers:
      - name: goserver
        image: devguerreiro/hello-go
        resources:
            requests:
              cpu: "0.05"
              memory: 20M
            limits:
              cpu: "0.05"
              memory: 25M
