k8s/deployment_secret.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goserver
  labels:
    name: goserver
spec:
  replicas: 1
  selector:
    matchLabels:
      name: goserver
  template:
    metadata:
      name: goserver
      labels:
        name: goserver
    spec:
      containers:
      - name: goserver
        image: devguerreiro/hello-go:v4
        volumeMounts:
          - mountPath: "/go/myfamily"
            name: config

      volumes:
        - name: config
          configMap:
            name: configmap-family
            items:
              - key: members
                path: "family.txt"
