k8s/deployment_startup.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goserver
  labels:
    name: goserver
spec:
  replicas: 1
  selector:
    matchLabels:
      name: goserver
  template:
    metadata:
      name: goserver
      labels:
        name: goserver
    spec:
      containers:
        - name: goserver
          image: devguerreiro/hello-go:v5.2
          startupProbe:
            httpGet:
              path: /health-check
              port: 80
            periodSeconds: 5 # interval
            failureThreshold: 10 # retries
          readinessProbe:
            httpGet:
              path: /health-check
              port: 80
            periodSeconds: 5 # interval
            failureThreshold: 1 # retries
          livenessProbe:
            httpGet:
              path: /health-check
              port: 80
            periodSeconds: 5 # interval
            failureThreshold: 1 # retries
          volumeMounts:
            - mountPath: "/go/myfamily"
              name: config

      volumes:
        - name: config
          configMap:
            name: configmap-family
            items:
              - key: members
                path: "family.txt"
