k8s/service_loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
        name: goserver-service
spec:
        selector:
                name: goserver
        type: LoadBalancer
        ports:
                - name: goserver-service
                  port: 80
                  targetPort: 80
                  protocol: TCP
