k8s/service_node_port.yaml
apiVersion: v1
kind: Service
metadata:
        name: goserver-service
spec:
        selector:
                name: goserver
        type: NodePort
        ports:
                - name: goserver-service
                  port: 80
                  targetPort: 80
                  protocol: TCP
                  nodePort: 30003
